task1/test_results_no_defects/infer_test/invalid_memory_access/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/invalid_memory_access.c:538: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 537 by call to `invalid_memory_access_015_func_001()`, is not freed after the last access at line 538, column 13.
  536.             char * str;
  537.             str = invalid_memory_access_015_func_001(buf[j]);
  538.             psink = str;
                   ^
  539.         }
  540.     }

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
    Memory Leak(MEMORY_LEAK): 1
